@@ -180,9 +180,9 @@ require([
                 label: 'Code',
                 value: code,
                 placeHolder: 'Enter a code',
-                {% if mode=='UPDATE' %}
-                    disabled: true
-                {% endif %}
+{#                {% if mode=='UPDATE' %}#}
+{#                    disabled: true#}
+{#                {% endif %}#}
             }, 'sequence_code');
             code_textBox.startup();
 
