@@ -168,9 +168,9 @@ require([
                 label: 'Code',
                 placeHolder: 'Enter a code',
                 value: code,
-                {% if mode=='UPDATE' %}
-                    disabled: true,
-                {% endif %}
+{#                {% if mode=='UPDATE' %}#}
+{#                    disabled: true,#}
+{#                {% endif %}#}
             }, 'shot_code');
             code_textBox.startup();
 
